<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        app:srcCompat="@drawable/welcome" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="#CCEEEEEE"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_in"
        android:textColor="#414D59"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:backgroundTint="#59EEEEEE"
        android:text="@string/sign_up"
        android:textColor="#414D59"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/img_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_1999_2021_team_10_inc"
        android:textColor="#414D59"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintVertical_bias="0.59" />

</androidx.constraintlayout.widget.ConstraintLayout>